# timetable-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL_REPORT.md  _analyze_groups.py  _compare_manual.py  _debug_bce.py  _debug_rooms.py  _debug_tek.py  _test_timer.py  _trace_violations.py  cpsat_phase1.py  cpsat_sc_optimize.py  cpsat_solver.py  diag_pools.py  diagnose_demand.py  diagnose_instructors.py  diagnose_pools.py  diagnose_rooms.py  entrypoint.sh  generate_pdfs_fast.py  grpc_server.py  http_server.py  investigate_bce3.py  investigate_z999.py  manual_routine.json  pyproject.toml  run_test.py  schedule.json  schedule_lns.py  schedule_output.json  schedule_threephase.py  schedule_twophase.py  solve.py
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
data/: Course.json  Groups.json  Instructors.json  Rooms.json
data_fixed/: Course.json  Instructors.json  Rooms.json
experiments/: bisect_pools.py  cpsat_oracle.py  run_aggressive.py  run_multi_versions.py  solve_schedule.py  solve_schedule_old.py  solve_schedule_v2.py
proto/: scheduler.proto
runs/: __init__.py  ga_04_adaptive.py
scripts/: analyze_instructor_load.py  compute_realistic_maxload.py  diagnose.py  diagnose_flow.py  diagnose_room_failures.py  generate_maxload.py  repair_data.py
specs/001-cpsat-sc-optimizer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cpsat-sc-optimizer/checklists/: requirements.md
specs/001-cpsat-sc-optimizer/contracts/: cli-contract.md
src/: __init__.py  exceptions.py  grpc_service.py
src/config/: __init__.py
src/constraints/: __init__.py  constraints.py  evaluator.py
src/domain/: __init__.py  course.py  gene.py  group.py  instructor.py  room.py  session.py  timetable.py  types.py
src/experiments/: __init__.py  base.py  callback_core.py  ga_experiment.py  moea_metrics.py
src/ga/: __init__.py
src/ga/core/: __init__.py  domain_store.py  evaluator.py  population.py  population_factory.py  quanta_converter.py  schedule_index.py  usage_tracker.py
src/ga/metrics/: __init__.py  _nds.py  convergence.py  diversity.py  hypervolume.py  pareto_metrics.py  violation_heatmap.py  violation_recorder.py
src/ga/operators/: __init__.py  constraint_aware.py  constraint_guided_mutation.py  crossover.py  intensive_local_search.py  local_search.py  mutation.py
src/ga/repair/: __init__.py  basic.py  break_repair.py  conflict_detection.py  detector.py  engine.py  exhaustive.py  greedy.py  group_clash_repair.py  heuristic_repair.py  hierarchy.py  igls.py  memetic.py  parallel.py  pipeline.py  selective.py  selective_heuristic.py  wrappers.py
src/io/: __init__.py  data_loader.py  data_store.py  decoder.py  feasibility.py  time_system.py  validator.py
src/io/export/: __init__.py  exporter.py  feasibility_reporter.py  plot_convergence.py  plot_detailed_constraints.py  plot_hypervolume.py  plot_igd.py  plot_memetic.py  plot_pareto_evolution.py  plot_spacing.py  plotdiversity.py  plothard.py  plotpareto.py  plotsoft.py  schedule_views.py  thesis_style.py  violation_reporter.py
src/pipeline/: __init__.py  batch_api.py  bitset_time.py  build_events.py  cpsat_sc_optimizer.py  encoding.py  fast_evaluator.py  fast_evaluator_batch.py  fast_evaluator_vectorized.py  pymoo_operators.py  repair_analysis_vectorized.py  repair_operator.py  repair_operator_bitset.py  repair_operator_vectorized.py  scheduling_problem.py  soft_evaluator_vectorized.py  vectorized_lookups.py
src/proto/: scheduler_pb2.py  scheduler_pb2_grpc.py
src/utils/: __init__.py  console_service.py  logging_config.py  output_paths.py  parallel_worker.py  room_compatibility.py  system_info.py
tests/: conftest.py  test_algorithm_correctness.py  test_algorithms_comprehensive.py  test_audit_improvements.py  test_batch_api.py  test_bitset_time.py  test_constraints_hard.py  test_constraints_soft.py  test_crossover.py  test_data_store.py  test_dead_code.py  test_equivalence_proper.py  test_fast_evaluator_simple.py  test_ga_operators.py  test_group_clash_repair.py  test_integration.py  test_integration_audit.py  test_logging.py  test_metrics_batch.py  test_migration_gates.py  test_moea_quality.py  test_oop_redesign.py  test_parallel_repair.py  test_phase2_consolidation.py  test_repair_analysis_vectorized.py  test_repair_bitset.py  test_repair_offspring.py  test_repair_realistic.py  test_repairs.py  test_schedule_index.py  test_soft_eval_vectorized.py  test_spreading.py  test_timetable.py  test_violation_detector.py
